fix: browser text align

--- a/src/pages/css/Result.module.css
+++ b/src/pages/css/Result.module.css
@@ -73,7 +73,7 @@ ul{
 
 .PlusMinusArea{
     width: 100%;
-    margin-left: 4vw;
+    margin: auto;
     height: auto;
     margin-top: 15px;
 
